--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="top-line">Voix
-      <div class="small">soon</div>
+      <div class="small">soon</div><img src="/assets/img/doge.jpeg">
     </div>
     <script src="/assets/js/jquery.min.js"></script>
     <script src="/assets/js/bootstrap.min.js"></script>
