--- a/index.html
+++ b/index.html
@@ -1,18 +1,10 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Voix</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/main.css"><!--[if lt IE 9]>
-    <script src="/assets/js/html5shiv.js"></script>
-    <script src="/assets/js/respond.min.js"></script><![enif]-->
-  </head>
-  <body>
-    <div class="top-line">Voix
-      <div class="small">soon</div><img src="/assets/img/doge.jpeg">
-    </div>
-    <script src="/assets/js/jquery.min.js"></script>
-    <script src="/assets/js/bootstrap.min.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html><head><title>Voix</title><meta name="viewport" content="width=device-width, initial-scale=1.0"><link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet"><link rel="stylesheet" href="/assets/css/main.css"><!--[if lt IE 9]><script src="/assets/js/html5shiv.js"></script><script src="/assets/js/respond.min.js"></script><![enif]--></head><body><header><div class="voix-brand"></div></header><section class="one"><div class="columns"><div class="column left"><h2>Наши цели</h2><p>Мы специализируемся на создании корпоративного ПО любой сложности.</p><p>При разработке мы делаем основной упор на удобство для конечного пользователя.</p><p>Вторым приоритетом для нас является скорость установки, обновления и настройки нашего ПО.</p><p>Мы очень любим эксперементировать со всем новым и всегда стараемся находиться на острие прогресса.</p></div><div class="column right"><img src="/assets/img/about.png"></div></div></section><section class="two"><div class="columns"><div class="column left"><img src="/assets/img/workflow.png"></div><div class="column right"><h2>Чего мы уже достигли</h2><p>Наши специалисты имеют опыт работы с Web и GIS технологиями с 2005 года.</p><p>Работая для крупных корпоративных заказчиков, мы оптимизировали все наши внутренние
+процессы.</p><p>Мы верим что удобство работы наших сотрудников превыше всего, поэтому у нас используются
+самые новые и совершенные инструменты разработки.</p></div></div></section><section class="three"><div class="columns"><div class="column"><h2>Наш текущий стек технологий</h2></div></div><div class="logos"><div class="logo"><a href="http://nodejs.org"><img src="/assets/img/nodejs.png" title="NodeJS"></a></div><div class="desc"><h3>NodeJS</h3><p>Идеален для быстрого прототипирования и создания RESTful JSON API.
+А с помощью node-webkit можно создавать полноценные десктоп приложения.
+Огромный выбор библиотек NodeJS с открытым кодом трудно переоценить.</p></div></div><div class="logos"><div class="logo"><a href="http://www.html5rocks.com/" title="HTML5"><img src="/assets/img/html5.png"></a></div><div class="desc"><h3>HTML5</h3><p>Мы стараемся ориентироваться на современные браузеры, в которых развита поддержка HTML5,
+это позволяет нам максимизировать удобство пользователей.</p></div></div><div class="logos"><div class="logo"><a href="http://angularjs.org/"><img src="/assets/img/angular.png" title="AngularJS"></a></div><div class="desc"><h3>AngularJS</h3><p>Этот фреймворк от Google уже 2-й год наш постоянный спутник во всех проектах. Его широкие
+возможности тестирования, удобная система модулей и простота нам не оставили выбора.</p></div></div><div class="logos"><div class="logo"><a href="http://golang.org/"><img src="/assets/img/golang.png" title="Go Language"></a></div><div class="desc"><h3>Go language</h3><p>Когда нужно написать какой-либо инструмент, установка которого заключается в
+простом копировании исполняемого файла Go незаменим. Помимо этого Go ориентирован на
+системы с большим количеством процессоров.</p></div></div><div class="logos"><div class="logo"><a href="http://java.com/"><img src="/assets/img/java.png" title="Java"></a></div><div class="desc"><h3>Java</h3><p>Java в наши дни продолжает радовать новыми версиями, а ее возможности обратной совместимости
+отлично подходят для интеграции со старыми системами.</p></div></div></section><footer>oh hai!</footer></body></html>
