--- a/index.html
+++ b/index.html
@@ -8,4 +8,9 @@
 возможности тестирования, удобная система модулей и простота нам не оставили выбора.</p></div></div><div class="logos"><div class="logo"><a href="http://golang.org/"><img src="/assets/img/golang.svg" title="Go Language"></a></div><div class="desc"><a href="http://golang.org/"><h3>Go language</h3></a><p>Когда нужно написать какой-либо инструмент, установка которого заключается в
 простом копировании исполняемого файла, Go незаменим. Помимо этого, Go очень удобен в
 разработке многопоточных систем.</p></div></div><div class="logos"><div class="logo"><a href="http://java.com/"><img src="/assets/img/java.svg" title="Java"></a></div><div class="desc"><a href="http://java.com/"><h3>Java</h3></a><p>Java в наши дни продолжает радовать новыми версиями, а ее возможности обратной совместимости
-отлично подходят для интеграции со старыми системами.</p></div></div></section></div><footer><div class="social"><a href="https://twitter.com/teamvoix"><span class="fa fa-twitter"></span></a>&nbsp;|&nbsp;<a href="mailto:team@voix.io">team@voix.io</a></div><div class="copy">Copyright 2014,<span class="voix">VOIX</span>, LLC. All rights reserved.</div></footer></body></html>
+отлично подходят для интеграции со старыми системами.</p></div></div></section></div><footer><div class="social"><a href="https://twitter.com/teamvoix"><span class="fa fa-twitter"></span></a>&nbsp;|&nbsp;<a href="mailto:team@voix.io">team@voix.io</a></div><div class="copy">Copyright 2014,<span class="voix">VOIX</span>, LLC. All rights reserved.</div></footer><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+ga('create', 'UA-49275214-1', 'viox.io');
+ga('send', 'pageview');</script></body></html>
