added some images and text

--- a/index.html
+++ b/index.html
@@ -37,27 +37,16 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li class="current"><a href="index.html">Welcome</a></li>
-								<li>
-									<a href="">Dropdown</a>
-									<ul>
-										<li><a href="#">Lorem ipsum dolor</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li>
-											<a href="">Phasellus consequat</a>
-											<ul>
-												<li><a href="#">Lorem ipsum dolor</a></li>
-												<li><a href="#">Phasellus consequat</a></li>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam dolore nisl</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Veroeros feugiat</a></li>
+								<li class="current"><a href="index.html">Главная</a></li>
+								<li class="opener" style="-webkit-user-select: none; cursor: pointer; white-space: nowrap; opacity: 1;">
+								<a href="">Продукты</a>
+									<ul style="-webkit-user-select: none; display: none; position: absolute;" class="">
+										<li style="white-space: nowrap;"><a href="#" style="display: block;">GE SmallWorld PNI</a></li>
+										<li style="white-space: nowrap;"><a href="#" style="display: block;">GE SmallWorld LNI</a></li>
+										<li style="white-space: nowrap;"><a href="#" style="display: block;">GE SmallWorld EO</a></li>
 									</ul>
 								</li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
+								<li><a href="index.html">Контакты</a></li>
 							</ul>
 						</nav>
 
@@ -68,15 +57,12 @@
 			<div id="banner-wrapper">
 				<div id="banner" class="box container">
 					<div class="row">
-						<div class="7u">
-							<h2>Hi. This is Verti.</h2>
-							<p>It's a free responsive site template by HTML5 UP</p>
+						<div class="2u">
+							<img class="image fit" src="images/ge.svg" />
 						</div>
-						<div class="5u">
-							<ul>
-								<li><a href="#" class="button big icon fa-arrow-circle-right">Ok let's go</a></li>
-								<li><a href="#" class="button alt big icon fa-question-circle">More info</a></li>
-							</ul>
+						<div class="10u">
+							<h2>General Electric</h2>
+							<p>Мы авторизованный Solutions Provider.</p>
 						</div>
 					</div>
 				</div>
@@ -90,13 +76,16 @@
 
 							<!-- Box -->
 								<section class="box feature">
-									<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="#" class="image featured"><img src="images/optical.jpg" alt="" /></a>
 									<div class="inner">
 										<header>
-											<h2>Put something here</h2>
+											<h2>Телекоммуникации</h2>
 											<p>Maybe here as well I think</p>
 										</header>
 										<p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper amet bibendum tristique fringilla.</p>
+										<footer>
+											<a href="#" class="button icon fa-arrow-circle-right">Подробнее</a>
+										</footer>
 									</div>
 								</section>
 
@@ -105,13 +94,16 @@
 
 							<!-- Box -->
 								<section class="box feature">
-									<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#" class="image featured"><img src="images/electricity.jpg" alt="" /></a>
 									<div class="inner">
 										<header>
-											<h2>An interesting title</h2>
+											<h2>Электричество</h2>
 											<p>This is also an interesting subtitle</p>
 										</header>
 										<p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper amet bibendum tristique fringilla.</p>
+										<footer>
+											<a href="#" class="button icon fa-arrow-circle-right">Подробнее</a>
+										</footer>
 									</div>
 								</section>
 
@@ -120,13 +112,16 @@
 
 							<!-- Box -->
 								<section class="box feature last">
-									<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image featured"><img src="images/oilandgas.jpg" alt="" /></a>
 									<div class="inner">
 										<header>
-											<h2>Oh, and finally ...</h2>
+											<h2>Нефть и газ</h2>
 											<p>Here's another intriguing subtitle</p>
 										</header>
 										<p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper amet bibendum tristique fringilla.</p>
+										<footer>
+											<a href="#" class="button icon fa-arrow-circle-right">Подробнее</a>
+										</footer>
 									</div>
 								</section>
 
@@ -139,37 +134,62 @@
 			<div id="main-wrapper">
 				<div class="container">
 					<div class="row">
-						<div class="4u">
-
-							<!-- Sidebar -->
-								<div id="sidebar">
-									<section class="widget thumbnails">
-										<h3>Interesting stuff</h3>
-										<div class="grid">
-											<div class="row no-collapse half">
-												<div class="6u"><a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a></div>
-												<div class="6u"><a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a></div>
-											</div>
-											<div class="row no-collapse half">
-												<div class="6u"><a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a></div>
-												<div class="6u"><a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a></div>
-											</div>
-										</div>
-										<a href="#" class="button icon fa-file-text-o">More</a>
-									</section>
-								</div>
-
-						</div>
-						<div class="8u skel-cell-important">
+						<div class="6u skel-cell-important">
 
 							<!-- Content -->
 								<div id="content">
 									<section class="last">
-										<h2>So what's this all about?</h2>
-										<p>This is <strong>Verti</strong>, a free and fully responsive HTML5 site template by <a href="http://html5up.net">HTML5 UP</a>.
-										Verti is released under the <a href="http://html5up.net/license">Creative Commons Attribution license</a>, so feel free to use it for any personal or commercial project you might have going on (just don't forget to credit us for the design!)</p>
-										<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus. Praesent semper bibendum ipsum, et tristique augue fringilla eu. Vivamus id risus vel dolor auctor euismod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat. Aliquam luctus mattis lectus sit amet phasellus quam turpis.</p>
-										<a href="#" class="button icon fa-arrow-circle-right">Continue Reading</a>
+										<h2>Наши приоритеты</h2>
+										<p><i class="fa fa-check"></i><b> Качественное ПО.</b> Мы специализируемся на создании корпоративного ПО любой сложности.<br />
+										<i class="fa fa-check"></i><b> Удобство.</b> При разработке мы делаем основной упор на удобство для конечного пользователя.<br />
+										<i class="fa fa-check"></i><b> Быстрая реакция.</b> Акцент на скорости установки, обновления и настройки нашего ПО.<br />
+										<i class="fa fa-check"></i><b> Быть на острие прогресса.</b> Мы очень любим пробовать все новое и стараемся всегда находиться на острие прогресса.</p>
+									</section>
+								</div>
+
+						</div>
+						<div class="6u">
+
+							<!-- Sidebar -->
+								<div id="sidebar">
+									<img class="image fit round" src="images/about.png" />
+								</div>
+
+						</div>
+					</div>
+					<div class="row">
+						<div class="3u">
+
+							<!-- Sidebar -->
+								<div id="sidebar">
+									<section class="widget thumbnails">
+										<h3>Мы используем</h3>
+										<div class="grid">
+											<div class="row no-collapse half">
+												<div class="4u"><a href="http://nodejs.org/" title="NodeJS" class="image fit"><img src="images/nodejs.svg" alt="" /></a></div>
+												<div class="4u"><a href="http://www.html5rocks.com/" title="HTML5" class="image fit"><img src="images/html5.svg" alt="" /></a></div>
+												<div class="4u"><a href="http://golang.org/" title="Go programming language" class="image fit"><img src="images/golang.svg" alt="" /></a></div>
+											</div>
+											<div class="row no-collapse half">
+												<div class="4u"><a href="https://angularjs.org/" title="AngularJS" class="image fit"><img src="images/angular.svg" alt="" /></a></div>
+												<div class="4u"><a href="http://www.postgresql.org/" title="PosgreSQL" class="image fit"><img src="images/posgresql.svg" alt="" /></a></div>
+												<div class="4u"><a href="https://www.gnu.org/software/emacs/" title="GNU Emacs" class="image fit"><img src="images/emacs.svg" alt="" /></a></div>
+											</div>
+										</div>
+									</section>
+								</div>
+
+						</div>
+						<div class="9u skel-cell-important">
+
+							<!-- Content -->
+								<div id="content">
+									<section class="last">
+										<h2>Наш опыт</h2>
+										<p><i class="fa fa-check"></i> Наши специалисты имеют опыт работы с Web и GIS технологиями с 2005 года.<br />
+										<i class="fa fa-check"></i> Работая для крупных корпоративных заказчиков, мы оптимизировали все наши внутренние процессы.<br />
+										<i class="fa fa-check"></i> Мы верим что удобство работы наших сотрудников превыше всего, поэтому у нас используются самые новые и совершенные инструменты разработки.<br />
+										<i class="fa fa-check"></i> Мы большие поклонники книг<a href="https://37signals.com/rework/"> Rework</a> и<a href="https://37signals.com/remote/"> Remote</a> и наша деятельность построена на удаленном взаимодействии между сотрудниками.</p>
 									</section>
 								</div>
 
