--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 								<li class="opener" style="-webkit-user-select: none; cursor: pointer; white-space: nowrap; opacity: 1;">
 								<a href="">Продукты</a>
 									<ul style="-webkit-user-select: none; display: none; position: absolute;" class="">
-										<li style="white-space: nowrap;"><a href="#" style="display: block;">GE SmallWorld PNI</a></li>
+										<li style="white-space: nowrap;"><a href="geswni.html" style="display: block;">GE SmallWorld Network Inventory</a></li>
 										<li style="white-space: nowrap;"><a href="#" style="display: block;">GE SmallWorld LNI</a></li>
 										<li style="white-space: nowrap;"><a href="#" style="display: block;">GE SmallWorld EO</a></li>
 									</ul>
@@ -62,7 +62,7 @@
 						</div>
 						<div class="10u">
 							<h2>General Electric</h2>
-							<p>Мы авторизованный Solutions Provider.</p>
+							<p>Будучи авторизованным Solutions Provider, мы предлагаем отраслевые решения.</p>
 						</div>
 					</div>
 				</div>
@@ -97,7 +97,7 @@
 									<a href="#" class="image featured"><img src="images/electricity.jpg" alt="" /></a>
 									<div class="inner">
 										<header>
-											<h2>Электричество</h2>
+											<h2>Энергетика</h2>
 											<p>This is also an interesting subtitle</p>
 										</header>
 										<p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper amet bibendum tristique fringilla.</p>
