--- a/article/energy/index.html
+++ b/article/energy/index.html
@@ -72,13 +72,12 @@
 
 <h3 id="toc_3">Приложения для электроэнергетики</h3>
 
-<pre><code>&lt;ul class=&quot;default&quot;&gt;
-    &lt;li&gt;Стандартное картографическое отображение – воздушные линии, подземная инфраструктура и потоки.&lt;/li&gt;
-    &lt;li&gt;Регулирующие инструменты отчетности. Позволяют создавать стандартные и конфигурируемые отчеты по передаче.&lt;/li&gt;
-    &lt;li&gt;Управление загрузкой трансформаторов, интегрированное с биллинговой системой и измерительными приборами, с учетом спецификаций трансформаторов.&lt;/li&gt;
-    &lt;li&gt;Инструменты для контроля качества передачи и распределения электроэнергии.&lt;/li&gt;
-&lt;/ul&gt;
-</code></pre>
+<ul class="default">
+    <li>Стандартное картографическое отображение – воздушные линии, подземная инфраструктура и потоки.</li>
+    <li>Регулирующие инструменты отчетности. Позволяют создавать стандартные и конфигурируемые отчеты по передаче.</li>
+    <li>Управление загрузкой трансформаторов, интегрированное с биллинговой системой и измерительными приборами, с учетом спецификаций трансформаторов.</li>
+    <li>Инструменты для контроля качества передачи и распределения электроэнергии.</li>
+</ul>
 
 <h3 id="toc_4">Интеграция с промышленными решениями</h3>
 
