font-awesome cdn + adblock wrkrnd

--- a/article/geswni/index.html
+++ b/article/geswni/index.html
@@ -6,16 +6,10 @@
   <meta name="description" content=""/>
   <meta name="keywords" content=""/>
   
-  <script src="/js/jquery.min.js"></script>
-  <script src="/js/jquery.dropotron.min.js"></script>
-  <script src="/js/skel.min.js"></script>
-  <script src="/js/skel-layers.min.js"></script>
-  <script src="/js/init.js"></script>
-  <noscript>
-    <link rel="stylesheet" href="/css/skel.css"/>
-    <link rel="stylesheet" href="/css/style.css"/>
-    <link rel="stylesheet" href="/css/style-desktop.css"/>
-  </noscript>
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"/>
+  <link rel="stylesheet" href="/css/skel.css"/>
+  <link rel="stylesheet" href="/css/style.css"/>
+  <link rel="stylesheet" href="/css/style-desktop.css"/>
   
 </head>
 
@@ -182,10 +176,11 @@
         <section class="widget contact last">
           <h3>Контакты</h3>
           <ul>
-            <li><a href="https://twitter.com/teamvoix" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+            <li><a href="https://twitter.com/teamvoix" class="icon my-fa-twitter"><span class="label">Twitter</span></a></li>
             <li><a href="mailto:team@voix.io" class="icon fa-at"><span class="label">Email</span></a></li>
           </ul>
-          <p>Республика Казахстан, г. Алматы,</br>
+          <p>Республика Казахстан, <br/>
+            г. Алматы,<br/>
             ул. Панфилова, 98, офис 608.<br/>
             +7 (727) 244 6885</p>
           </section>
@@ -204,6 +199,11 @@
       </div>
     </footer>
   </div>
+  <script src="/js/jquery.min.js"></script>
+  <script src="/js/jquery.dropotron.min.js"></script>
+  <script src="/js/skel.min.js"></script>
+  <script src="/js/skel-layers.min.js"></script>
+  <script src="/js/init.js"></script>
 
 </body>
 </html>
