--- a/index.html
+++ b/index.html
@@ -283,5 +283,11 @@
   <script src="/js/skel-layers.min.js"></script>
   <script src="/js/init.js"></script>
 
+<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+ga('create', 'UA-49275214-1', 'viox.io');
+ga('send', 'pageview');</script>
 </body>
 </html>
