--- a/article/energy/index.html
+++ b/article/energy/index.html
@@ -185,7 +185,7 @@
           </ul>
           <p>Республика Казахстан, <br/>
             г. Алматы,<br/>
-            ул. Панфилова, 98, офис 608.<br/>
+            ул. Панфилова, 98, офис 608,<br/>
             +7 (727) 244 6885</p>
           </section>
 
