--- a/article/geswni/index.html
+++ b/article/geswni/index.html
@@ -179,10 +179,12 @@
             <li><a href="https://twitter.com/teamvoix" class="icon my-fa-twitter"><span class="label">Twitter</span></a></li>
             <li><a href="mailto:team@voix.io" class="icon fa-at"><span class="label">Email</span></a></li>
           </ul>
-          <p>Республика Казахстан, <br/>
+          <p>
+            Республика Казахстан, <br/>
             г. Алматы,<br/>
-            ул. Панфилова, 98, офис 608,<br/>
-            +7 (727) 244 6885</p>
+            Самал-2, д. 25, офис 1<br/>
+            +7 (727) 244 6885
+          </p>
           </section>
 
         </div>
