--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>
       <div class="10u">
         <h2>General Electric</h2>
-        <p>Будучи авторизованным Solutions Provider, мы предлагаем промышленные решения.</p>
+        <p>Будучи авторизованным Solution Provider, мы предлагаем промышленные решения.</p>
       </div>
     </div>
   </div>
@@ -257,10 +257,12 @@
             <li><a href="https://twitter.com/teamvoix" class="icon my-fa-twitter"><span class="label">Twitter</span></a></li>
             <li><a href="mailto:team@voix.io" class="icon fa-at"><span class="label">Email</span></a></li>
           </ul>
-          <p>Республика Казахстан, <br/>
+          <p>
+            Республика Казахстан, <br/>
             г. Алматы,<br/>
-            ул. Панфилова, 98, офис 608,<br/>
-            +7 (727) 244 6885</p>
+            Самал-2, д. 25, офис 1<br/>
+            +7 (727) 244 6885
+          </p>
           </section>
 
         </div>
