--- a/article/geswni/index.html
+++ b/article/geswni/index.html
@@ -193,8 +193,8 @@
         <div class="12u">
           <div id="copyright">
             <ul class="menu">
-              <li>&copy; Voix LLC. All rights reserved</li>
-              <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+              <li>&copy; ТОО Voix. Все права защищены</li>
+              <li>Дизайн: <a href="http://html5up.net">HTML5 UP</a></li>
             </ul>
           </div>
         </div>
