--- a/article/energy/index.html
+++ b/article/energy/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
   <meta name="description" content=""/>
   <meta name="keywords" content=""/>
+  <meta name="google-site-verification" content="AUJxZrPDffY5MZKZ_w4EReCf2PYSCJAeQpvz6lqavNQ" />
   
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"/>
   <link rel="stylesheet" href="/css/skel.css"/>
