--- a/article/geswni/index.html
+++ b/article/geswni/index.html
@@ -39,6 +39,10 @@
           <a href="/article/energy/">Энергетика</a>
         </li>
         
+        <li >
+          <a href="/article/gas/">Газ</a>
+        </li>
+        
       </ul>
     </nav>
   </header>
