--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </li>
         
         <li >
-          <a href="/article/gas/">Газ</a>
+          <a href="/article/gas/">Нефть и газ</a>
         </li>
         
       </ul>
@@ -112,7 +112,7 @@
     <a href="#" class="image featured"><img src="images/gas.jpg" /></a>
     <div class="inner">
       <header>
-        <h2>Газ</h2>
+        <h2>Нефть и газ</h2>
         <p>Smallworld GTO</p>
       </header>
       <p>Smallworld Global Transmission Office предлагает индустриальную модель данных и набор приложений для нефтегазовых компаний.</p>
