--- a/article/energy/index.html
+++ b/article/energy/index.html
@@ -40,7 +40,7 @@
         </li>
         
         <li >
-          <a href="/article/gas/">Газ</a>
+          <a href="/article/gas/">Нефть и газ</a>
         </li>
         
       </ul>
