--- a/article/gas/index.html
+++ b/article/gas/index.html
@@ -117,7 +117,7 @@
 
 <h3 id="toc_6">Smallworld GTO</h3>
 
-<p><img class="image left" src="/images/gas/2.png" />Smallworld GTO предлагает современную и гибкую отраслевую модель данных, описывающая трубопроводы и системы передачи нефти и газа, набор геопространственных бизнес-приложений, инструменты проверки целостности и анализа данных, специально разработанные ля автоматизации бизнес-процессов паспортизации трубопроводов</p>
+<p><img class="image left" src="/images/gas/2.png" />Smallworld GTO предлагает современную и гибкую отраслевую модель данных, описывающую трубопроводы и системы передачи нефти и газа, набор геопространственных бизнес-приложений, инструменты проверки целостности и анализа данных, специально разработанные для автоматизации бизнес-процессов паспортизации трубопроводов</p>
 
 <p><img class="image right" src="/images/gas/3.png" />Smallworld GTO содержит набор встроенных приложений для поддержки процессов технического учета и управления ресурсами трубопроводной сети для транспортировки природного газа и жидкостей с современной отраслевой моделью данных, разработанной в соответствии с нуждам заказчиков и требованиям законодательных и регулирующих органов к системам транспортировки газа и жидкостей.</p>
 
