--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
           <p>
             Республика Казахстан, <br/>
             г. Алматы,<br/>
-            Самал-2, д. 25, офис 1<br/>
+            ул. Панфилова 98, офис 608<br/>
             +7 (727) 244 6885
           </p>
           </section>
