--- a/article/energy/index.html
+++ b/article/energy/index.html
@@ -39,7 +39,6 @@
     </nav>
   </header>
 </div>
-
   <div id="main-wrapper">
     <div class="container">
       <div id="content">
@@ -128,40 +127,57 @@
   <div id="footer-wrapper">
   <footer id="footer" class="container">
     <div class="row">
-      <div class="12u">
+      <div class="9u">
         
         <section class="widget contact last" style="text-align: right; max-width: 100%;">
-          <h3>Контакты</h3>
+          <h3>Contacts</h3>
           <ul>
-            <li><a href="https://twitter.com/teamvoix" class="icon my-fa-twitter"><span class="label">Twitter</span></a></li>
+            <li><a href="https://twitter.com/teamvoix" class="icon my-fa-twitter"><span class="label">Twitter</span></a>
+            </li>
             <li><a href="mailto:team@voix.io" class="icon fa-at"><span class="label">Email</span></a></li>
           </ul>
           <p>
-            Республика Казахстан,<br/>
-            г. Алматы,<br/>
-            ул. Мынбаева, 151, офис 35<br/>
+            Kazakhstan, Almaty,<br />
+            151 Minbayev street,<br />
+            office 35, 050046<br />
             +7 (727) 331 58 00
           </p>
-          </section>
-        </div>
+        </section>
       </div>
-      <div class="row">
-        <div class="12u">
-          <div id="copyright">
-            <ul class="menu">
-              <li>&copy; ТОО Voix. Все права защищены</li>
-              <li>Дизайн: <a href="http://html5up.net">HTML5 UP</a></li>
-            </ul>
-          </div>
-        </div>
+      <div>
+        <section class="widget contact last" style="text-align: right; max-width: 100%;">
+          <h3>Контакты</h3>
+          <ul>
+            <li><a href="https://twitter.com/teamvoix" class="icon my-fa-twitter"><span class="label">Twitter</span></a>
+            </li>
+            <li><a href="mailto:team@voix.io" class="icon fa-at"><span class="label">Email</span></a></li>
+          </ul>
+          <p>
+            Республика Казахстан,<br />
+            г. Алматы, 050046<br />
+            ул. Мынбаева, 151, офис 35<br />
+            +7 (727) 331 58 00
+          </p>
+        </section>
       </div>
-    </footer>
+    </div>
+</div>
+<div class="row">
+  <div class="12u">
+    <div id="copyright">
+      <ul class="menu">
+        <li>&copy; ТОО Voix. Все права защищены</li>
+        <li>Дизайн: <a href="http://html5up.net">HTML5 UP</a></li>
+      </ul>
+    </div>
   </div>
-  <script src="/js/jquery.min.js"></script>
-  <script src="/js/jquery.dropotron.min.js"></script>
-  <script src="/js/skel.min.js"></script>
-  <script src="/js/skel-layers.min.js"></script>
-  <script src="/js/init.js"></script>
-
+</div>
+</footer>
+</div>
+<script src="/js/jquery.min.js"></script>
+<script src="/js/jquery.dropotron.min.js"></script>
+<script src="/js/skel.min.js"></script>
+<script src="/js/skel-layers.min.js"></script>
+<script src="/js/init.js"></script>
 </body>
 </html>
